// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`swapScheduled deposit channel origin stores a new swap from a btc deposit channel 1`] = `
{
  "createdAt": Any<Date>,
  "depositAmount": "75000000",
  "depositReceivedAt": 2022-12-06T14:31:33.000Z,
  "depositReceivedBlockIndex": "100-0",
  "destAddress": "0x41ad2bc63a2059f9b623533d87fe99887d794847",
  "destAsset": "ETH",
  "egressAmount": null,
  "id": Any<BigInt>,
  "intermediateAmount": null,
  "nativeId": 3n,
  "srcAsset": "BTC",
  "swapDepositChannelId": Any<BigInt>,
  "swapExecutedAt": null,
  "swapExecutedBlockIndex": null,
  "txHash": null,
  "updatedAt": Any<Date>,
}
`;

exports[`swapScheduled deposit channel origin stores a new swap from a dot deposit channel 1`] = `
{
  "createdAt": Any<Date>,
  "depositAmount": "125000000000",
  "depositReceivedAt": 2022-12-06T14:31:33.000Z,
  "depositReceivedBlockIndex": "100-0",
  "destAddress": "bcrt1pzjdpc799qa5f7m65hpr66880res5ac3lr6y2chc4jsa",
  "destAsset": "BTC",
  "egressAmount": null,
  "id": Any<BigInt>,
  "intermediateAmount": null,
  "nativeId": 1n,
  "srcAsset": "DOT",
  "swapDepositChannelId": Any<BigInt>,
  "swapExecutedAt": null,
  "swapExecutedBlockIndex": null,
  "txHash": null,
  "updatedAt": Any<Date>,
}
`;

exports[`swapScheduled smart contract origin stores a new swap from a contract deposit 1`] = `
{
  "createdAt": Any<Date>,
  "depositAmount": "175000000000000000",
  "depositReceivedAt": 2022-12-06T14:31:33.000Z,
  "depositReceivedBlockIndex": "100-0",
  "destAddress": "5D34dL5prEUaGNQtPPZ3yN5Y6BnkfXunKXXz6fo7ZJbLwRRH",
  "destAsset": "DOT",
  "egressAmount": null,
  "id": Any<BigInt>,
  "intermediateAmount": null,
  "nativeId": 2n,
  "srcAsset": "ETH",
  "swapDepositChannelId": null,
  "swapExecutedAt": null,
  "swapExecutedBlockIndex": null,
  "txHash": "0x1103ebed92b02a278b54789bfabc056e69ad5c6558049364ea23ec2f3bfa0fd9",
  "updatedAt": Any<Date>,
}
`;
